@@ -15,7 +15,7 @@ CONFIG = {
   'Files' => {
 
     # Array of directories where freeVikings will look for sets of levels
-    'levels' => ['locs'],
+    'levels' => ['locs/DefaultCampaign'],
 
     # where directories gfx/ and music/ are
     'media' => '.'
@@ -52,7 +52,7 @@ CONFIG = {
     'music enabled' => true,
 
     # number
-    'music volume' => 61
+    'music volume' => 1.0
   },
 
   ### GAME
