@@ -17,10 +17,21 @@ CONFIG = {
   },
   'Audio' => {
     'music enabled' => [true, false],
-    'music volume' => Numeric
+    'music volume' => Proc.new {|v| v.is_a?(Float) && v >= 0.0 && v <= 1.0 }
   },
   'Game' => {
-    'order of vikings' => Array,
+    'order of vikings' => Proc.new {|ary|
+      # array must contain names 'Baleog', 'Erik' and 'Olaf':
+      if ary.size != 3
+        false
+      elsif ary.find {|v| 
+          n = v.downcase
+          (n !~ /eri[ck]/) && (n !~ /baleog/) && (n !~ /olaf/)}
+        false
+      else
+        true
+      end
+      },
     'show level password' => [true, false],
     'viking switch' => [:warp, :smooth],
     'game speed' => Numeric,
